# vgfx

./: CMakeLists.txt  License  ReadMe.md
include/: vgfx.h  vk_mem_alloc.h
shaders/: shader.frag  shader.vert
src/: log.c  main.c  sds.c  verts.c  vk.c
